# RequestBin

./: .dockerignore  .gitignore  README.md  docker-compose.yml  nginx.conf
api/: Dockerfile  README.md
api/requestbin/: README.md  build.sbt
api/requestbin/src/main/resources/: application.conf  logback.xml
api/requestbin/src/main/scala/: Main.scala  ScalatraBootstrap.scala
api/requestbin/src/main/scala/application/: BinCleaner.scala  BinCreator.scala  RequestCollector.scala  RequestReader.scala  Traits.scala  Transaction.scala
api/requestbin/src/main/scala/config/: Env.scala  FrontendConfig.scala  InitDatabase.scala
api/requestbin/src/main/scala/domain/: Bin.scala  CapturedRequest.scala
api/requestbin/src/main/scala/infrastructure/: BinDatabase.scala  BinRepository.scala  CapturedRequestDatabase.scala  CapturedRequestFactory.scala  CapturedRequestRepository.scala  TxManager.scala
api/requestbin/src/main/scala/interface/: BinCleanupScheduler.scala  CapturedRequestFactory.scala  RequestBinServlet.scala
api/requestbin/src/test/scala/application/: BinCleanerSuite.scala  (+3 more)
proxy/: Dockerfile  README.md  nginx.conf
python/: README.md  pyproject.toml
python/reqbin/: __init__.py  _auth.py  _client.py  _config.py
web/: Dockerfile  README.md  entrypoint.sh
web/requestbin/: index.html  package-lock.json  package.json
web/requestbin/public/: config.js  serve.json
web/requestbin/src/: api.ts  auth.ts  config.ts  index.css  main.ts  my-element.ts  types.ts
web/requestbin/src/components/: bin-viewer.ts  request-detail.ts  request-item.ts
(+34 files in other folders)
